--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -14,9 +14,11 @@
     <!-- Стили границ -->
     <Style x:Key="SectionBorder" TargetType="Border">
         <Setter Property="Background" Value="{StaticResource SectionBackground}"/>
-        <Setter Property="Margin" Value="8"/>
-        <Setter Property="CornerRadius" Value="40"/>
+        <Setter Property="Margin" Value="8.2"/>
+        <Setter Property="CornerRadius" Value="30"/>
         <Setter Property="Padding" Value="15"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="0.7"/>
     </Style>
     <!-- Стили для колонок в боарде-->
     <Style x:Key="ColumnBorder" TargetType="Border">
