--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="KanbanToDo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:KanbanToDo"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:local="clr-namespace:KanbanToDo">
     <Application.Resources>
         <ResourceDictionary Source="Styles/Styles.xaml"/>
     </Application.Resources>
