--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -62,7 +62,8 @@
     </Style>
 
     <Style x:Key="TaskItemText" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
         <Setter Property="Margin" Value="15,2,2,2"/>
     </Style>
 
