--- a/Views/UserControls/ProjectsTree.xaml
+++ b/Views/UserControls/ProjectsTree.xaml
@@ -12,11 +12,12 @@
                         Style="{StaticResource AddButton}"/>
             </StackPanel>
             <TreeView ItemsSource="{Binding Projects}"
+                      
                       Style="{StaticResource ProjectsTreeView}">
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Tasks}">
                         <StackPanel>
-                            <TextBlock Text="{Binding Tasks}"
+                            <TextBlock Text="{Binding Name}"
                                        Style="{StaticResource ProjectItemText}"/>
                             <Button Content="+" 
                                     Margin="5,0,0,0"
@@ -26,7 +27,7 @@
                         </StackPanel>
                         <HierarchicalDataTemplate.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Name}"
+                                <TextBlock Text="{Binding Title}"
                                            Style="{StaticResource TaskItemText}"/>
                             </DataTemplate>
                         </HierarchicalDataTemplate.ItemTemplate>
